2005-04-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpmessagebox.c: plugged a small memleak.

	* libgimpwidgets/gimpcontroller.c: added a finalizer and free the
	allocated strings.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfig-utils.[ch]: added new function to reset
	a single property to its default value.

	* libgimpconfig/gimpconfig.def: updated.

	* app/config/gimpbaseconfig.[ch]: reverted last change.

	* app/base/base.c: use gimp_config_reset_property() instead.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: don't use -mwindows when linking gimp-console.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpconfig-path.[ch] (gimp_param_spec_config_path):
	declare default_value as const and allocate a copy.

	* app/config/gimpbaseconfig.[ch]: gives access to the default values
	for temp and swap path.

	* app/base/base.c (base_init): create the temp directory if it
	doesn't exist (bug #172682).

	* plug-ins/uri/uri-backend-gnomevfs.c: fixed path in error message.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* docs/Makefile.am: install a link to the gimp(1) man-page for
	gimp-console(1).

	* docs/gimp.1.in: mention gimp-console.

2005-04-06  Sven Neumann  <sven@gimp.org>

	* app/main.c: improved "--help" output.

	* docs/gimp.1.in: updated.

2005-04-05  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in: build and install gimp-console by default.

2005-04-05  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-ins-query.[ch]: new files containing
	plug_ins_query().

	* tools/pdbgen/pdb/plug_in.pdb (plugins_query): remove all code
	and use above function.

	* app/pdb/plug_in_cmds.c: regenerated.

2005-04-05  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/plug_in.pdb (plugins_query): strip the menu
	strings from underlines before matching. Fixed function to not
	match all procedures twice.

	* app/pdb/plug_in_cmds.c: regenerated.
